Updated talent section

--- a/index.html
+++ b/index.html
@@ -109,40 +109,17 @@
 		<h2>Technical Skills</h2>
 
 			<ul class="talent">
-				<li>Kubernetes</li>
-				<li>Cloud Run</li>
-				<li>Cloud SQL</li>
+				<li>Windows Server</li>
+				<li>PowerShell</li>
+				<li>Azure</li>
 			</ul>
 
 			<ul class="talent">
-				<li>Artifactory</li>
-				<li>Cloud CDN</li>
-				<li>Helm</li>
-			</ul>
-
-			<ul class="talent">
-				<li>Bash</li>
-				<li>Docker</li>
-				<li>Enterprise Cloud Migrations</li>
-			</ul>
-
-			<ul class="talent">
-				<li>Python</li>
-				<li>Terraform</li>
-				<li class="last">S3/SES</li>
-			</ul>
-
-			<ul class="talent">
-				<li>Lambda/DynamoDB</li>
-				<li>Cloudfront/Route 53</li>
-				<li class="last">CloudFormation/SAM</li>
-			</ul>
-
-			<ul class="talent">
-				<li>Google Cloud</li>
+				<li>SQL Server</li>
 				<li>Linux</li>
-				<li class="last">Residential/Industrial Plumbing</li>
+				<li>Stuff</li>
 			</ul>
+
 	</div>
 	
 	<div class="content">
